[package]
name = "wasm_keyevent"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
getrandom = { version = "0.2.12", features = ["js"] }
wasm-bindgen = "0.2.91"
futures = "0.3.30"
wasm-bindgen-futures = "0.4.41"
lazy_static = "1.4.0"

[dependencies.web-sys]
version = "0.3.68"
features = ["console",
           "Window",
           "Document",
           "HtmlCanvasElement",
           "CanvasRenderingContext2d",
           "Element",
           "HtmlImageElement",
           "Response",
           "Performance",
           "KeyboardEvent"]

[dev-dependencies]
wasm-bindgen-test = "0.3.41"
js-sys = "0.3.68"


